ANMProject/src/objects/In_Sync_Biling__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>In Sync Bilings</relationshipLabel>
        <relationshipName>In_Sync_Bilings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Accuracy__c</fullName>
        <label>Billing Accuracy</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country_Code__c</fullName>
        <label>Billing Country Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Latitude__c</fullName>
        <label>Billing Latitude</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Longitude_Code__c</fullName>
        <label>Billing Longitude Code</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Code__c</fullName>
        <label>Billing State Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>In Sync Biling</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>In Sync Biling</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>In Sync Bilings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>